@@ -2,6 +2,7 @@
 	* glsa-check: check SLOT when selecting and displaying upgrades
 	* glsa-check: new --emergelike option to use the best version 
 	within the same SLOT instead of the one with the smallest delta.
+	* glsa-check: prefer visible upgrades to masked upgrades
 
 2007-05-21: Paul Varner <fuzzyray@gentoo.org>
 	* echangelog: Add patch from genstef to fix issues from Bug 176337
